ajuste a listado de promos

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="z-col-lg-12 z-col-md-12 z-col-sm-12 z-col-xs-12 bgDarkClear">
                   <div class="z-block h100 mh100 overflowAuto">
                     <div class="z-content z-contentMiddle">
-                      <p class="cWhite s15>
+                      <p class="cWhite s15">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                       </p>
                     </div>
@@ -151,7 +151,7 @@
                 <div class="z-col-lg-12 z-col-md-12 z-col-sm-12 z-col-xs-12 bgDarkClear">
                   <div class="z-block h100 mh100 overflowAuto">
                     <div class="z-content z-contentMiddle">
-                      <p class="cWhite s15>
+                      <p class="cWhite s15">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                       </p>
                     </div>
@@ -175,7 +175,7 @@
                 <div class="z-col-lg-12 z-col-md-12 z-col-sm-12 z-col-xs-12 bgDarkClear">
                   <div class="z-block h100 mh100 overflowAuto">
                     <div class="z-content z-contentMiddle">
-                      <p class="cWhite s15>
+                      <p class="cWhite s15">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                       </p>
                     </div>
@@ -199,7 +199,7 @@
                 <div class="z-col-lg-12 z-col-md-12 z-col-sm-12 z-col-xs-12 bgDarkClear">
                   <div class="z-block h100 mh100 overflowAuto">
                     <div class="z-content z-contentMiddle">
-                      <p class="cWhite s15>
+                      <p class="cWhite s15">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                       </p>
                     </div>
@@ -223,7 +223,7 @@
                 <div class="z-col-lg-12 z-col-md-12 z-col-sm-12 z-col-xs-12 bgDarkClear">
                   <div class="z-block h100 mh100 overflowAuto">
                     <div class="z-content z-contentMiddle">
-                      <p class="cWhite s15>
+                      <p class="cWhite s15">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                       </p>
                     </div>
@@ -247,7 +247,7 @@
                 <div class="z-col-lg-12 z-col-md-12 z-col-sm-12 z-col-xs-12 bgDarkClear">
                   <div class="z-block h100 mh100 overflowAuto">
                     <div class="z-content z-contentMiddle">
-                      <p class="cWhite s15>
+                      <p class="cWhite s15">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                       </p>
                     </div>
@@ -271,7 +271,7 @@
                 <div class="z-col-lg-12 z-col-md-12 z-col-sm-12 z-col-xs-12 bgDarkClear">
                   <div class="z-block h100 mh100 overflowAuto">
                     <div class="z-content z-contentMiddle">
-                      <p class="cWhite s15>
+                      <p class="cWhite s15">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                       </p>
                     </div>
@@ -295,7 +295,7 @@
                 <div class="z-col-lg-12 z-col-md-12 z-col-sm-12 z-col-xs-12 bgDarkClear">
                   <div class="z-block h100 mh100 overflowAuto">
                     <div class="z-content z-contentMiddle">
-                      <p class="cWhite s15>
+                      <p class="cWhite s15">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                       </p>
                     </div>
