--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body class="bgLightGrey hFull">
 
-  <main class="z-container-fluid splash noPadding snap hFull">
+  <main class="z-container-fluid splash noPadding hFull">
     <div class="bgCover"></div>
     <div class="z-container">
       <div class="hFull z-block">
@@ -43,56 +43,59 @@
           </div>
           <div class="z-row">
             <div class="z-col-lg-4 z-col-lg-offset-2 z-col-md-4 z-col-md-offset-2 z-col-sm-4 z-col-sm-offset-2 z-col-xs-8 z-col-xs-offset-2">
-              <div class="z-btn h50 bgBlue cWhite s20 text-center boxShadow wow fadeInDown" data-wow-duration="1s" data-wow-delay="2s">
-                Facebook
+              <div class="z-btn btn-rounded h50 bgBlue cWhite s20 text-center boxShadow wow fadeInDown" data-wow-duration="1s" data-wow-delay="2s">
+                <span class="fa fa-facebook-square"></span> Facebook
               </div>
+              <div class="clear"></div>
             </div>
             <div class="z-col-lg-4 z-col-md-4 z-col-sm-4 z-col-sm-offset-0 z-col-xs-8 z-col-xs-offset-2">
-              <div class="z-btn h50 bgRed cWhite s20 text-center boxShadow wow fadeInDown" data-wow-duration="1s" data-wow-delay="2s">
-                Google+
+              <div class="z-btn btn-rounded h50 bgRed cWhite s20 text-center boxShadow wow fadeInDown" data-wow-duration="1s" data-wow-delay="2s">
+                <span class="fa fa-google-plus-square"></span> Google+
               </div>
+              <div class="clear"></div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </main>
-  <section class="z-container-fluid noPadding snap">
-    <nav class="nav z-container-fluid bgBlue boxShadow">
-      <div class="z-row">
+  <section class="z-container-fluid noPadding">
+    <nav class="nav z-container-fluid bgDark boxShadow">
+      <div class="z-row noMargin">
         <div class="z-block h50">
-          <a role="button" class="z-content-fluid z-contentMiddle text-center cLightGrey s15">
-            link
+          <a role="button" class="z-content-fluid z-contentMiddle text-left cLightGrey s15">
+            <span class="fa fa-bars s20"></span>
           </a>
           <a role="button" class="z-content-fluid z-contentMiddle text-center cLightGrey s15">
-            link
+            Home
           </a>
-          <a role="button" class="z-content-fluid z-contentMiddle text-center cLightGrey s15">
-            link
-          </a>
-          <a role="button" class="z-content-fluid z-contentMiddle text-center cLightGrey s15">
-            link
+          <a role="button" class="z-content-fluid z-contentMiddle text-right cLightGrey s15">
+            <span class="fa fa-user s20"></span>
           </a>
         </div>
       </div>
     </nav>
     <nav class="nav-movil wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
-      <div class="fab"><span class="fa fa-search s25"></span></div>
-      <div class="nav-modal">
+      <div class="fab bgBlue z-block">
+        <div class="z-content z-contentMiddle text-center">
+          <span class="fa fa-search s25"></span>
+        </div>
+      </div>
+      <div class="nav-modal bgDarkClear">
         <div class="blur"></div>
         <ul>
-          <li class="z-block h50">
-            <a href="#" class="z-content z-contentMiddle cWhite s20 text-bold z-btn bgRed boxShadow">
+          <li class="z-block h60">
+            <a href="#" class="z-content z-contentMiddle cDark s30 text-right text-uppercase">
               A donde ir
             </a>
           </li>
-          <li class="z-block h50">
-            <a href="#" class="z-content z-contentMiddle cWhite s20 text-bold z-btn bgBlue boxShadow">
+          <li class="z-block h60">
+            <a href="#" class="z-content z-contentMiddle cDark s30 text-right text-uppercase">
               Categorias
             </a>
           </li>
-          <li class="z-block h50">
-            <a href="#" class="z-content z-contentMiddle cWhite s20 text-bold z-btn bgGreen boxShadow">
+          <li class="z-block h60">
+            <a href="#" class="z-content z-contentMiddle cDark s30 text-right text-uppercase">
               Etc...
             </a>
           </li>
@@ -105,7 +108,7 @@
           <div class="z-block h100">
             <div class="z-content z-contentMiddle">
               <h1 class="text-center text-uppercase cDark s30 noMargin text-bold text-shadow wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-                Promos del día
+                noticias
               </h1>
             </div>
           </div>
