--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>appGobierno</title>
+  <title>A donde ir en la ciudad</title>
 
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -45,11 +45,11 @@
         <div class="z-content z-contentMiddle">
           <div class="z-row">
             <div class="z-col-lg-12">
-              <h1 class="text-center cWhite s65 noMargin text-bold text-shadow wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-                Gobierno
+              <h1 class="text-center cWhite s60 noMargin text-bold text-shadow wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                A donde ir
               </h1>
-              <h2 class="text-center cYellow s30 noMargin text-bold text-shadow wow fadeInDown" data-wow-duration="1s" data-wow-delay=".8s">
-                y servicios digitales
+              <h2 class="text-center cLightBlue s35 noMargin text-bold text-shadow wow fadeInDown" data-wow-duration="1s" data-wow-delay=".8s">
+                en la ciudad
               </h2>
             </div>
           </div>
