--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>appGobierno</title>
+  <title>A donde ir en la ciudad</title>
 
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -50,7 +50,7 @@
             <span class="fa fa-home s25"></span>
           </a>
         </div>
-        <div id="do_drag_search_open" class="z-content-fluid z-contentMiddle text-right">
+        <div class="z-content-fluid z-contentMiddle text-right">
           <a id="openSearch" role="button" class="cLightGrey s15">
             <span class="fa fa-search s25"></span>
           </a>
@@ -157,6 +157,7 @@
     <div class="hidden" id="do_drag_search_close"></div>
   </aside>
   <div id="do_drag"></div>
+  <div id="do_drag_search_open"></div>
   <main canvas="container" class="z-container-fluid noPadding scroll bgLightGrey">
     <section class="z-container mainContainer">
       <div class="z-row">
