--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>appGobierno</title>
+    <title>A donde ir en la ciudad</title>
 
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -51,7 +51,7 @@
               <span class="fa fa-home s25"></span>
             </a>
           </div>
-          <div id="do_drag_search_open" class="z-content-fluid z-contentMiddle text-right">
+          <div class="z-content-fluid z-contentMiddle text-right">
             <a id="openSearch" role="button" class="cLightGrey s15">
               <span class="fa fa-search s25"></span>
             </a>
@@ -157,7 +157,9 @@
       </form>
       <div class="hidden" id="do_drag_search_close"></div>
     </aside>
-    <div id="do_drag"></div><main canvas="container" class="z-container-fluid noPadding scroll bgLightGrey">
+    <div id="do_drag"></div>
+    <div id="do_drag_search_open"></div>
+    <main canvas="container" class="z-container-fluid noPadding scroll bgLightGrey">
       <section class="z-container mainContainer">
         <div class="z-row">
           <div class="z-col-lg-12 z-col-md-12 z-col-sm-12 z-col-xs-12">
@@ -166,7 +168,7 @@
                 <div id="img_00" class="z-block panelImg h300">
                   <div class="z-content z-contentBottom">
                     <h1 class="text-center text-uppercase cWhite s40 text-bold text-shadow wow fadeInDown bgDarkClear" data-wow-duration="1s" data-wow-delay=".5s">
-                      Titulo de la noticia
+                      Titulo
                     </h1>
                   </div>
                 </div>
@@ -178,19 +180,6 @@
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                       <br>
                       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                      <br>
-                      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                      <br>
-                      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                    <p class="cDark s15 text-justify">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                      <br>
-                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                      <br>
-                      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                      <br>
-                      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </p>
                   </div>
                 </div>
