--- a/news.html
+++ b/news.html
@@ -210,7 +210,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/slidebars/dist/slidebars.min.js"></script>
-    <script src="bower_components/jquery-touchSwipe/jquery.touchSwipe.min.js"></script>
+    <script src="js/jquery.touchSwipe.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/scripts.js"></script>
   </body>
