--- a/news.html
+++ b/news.html
@@ -102,40 +102,40 @@
       <div class="sidebar-nav">
         <div class="collapse" id="profile-dropdown">
           <div class="list-group bgLightGrey noBorder square">
-            <a role="button" class="list-group-item cWhite s15 square noBorder noMargin bgDark">
+            <a role="button" class="list-group-item cWhite s20 square noBorder noMargin bgDark">
               Ir a perfil
             </a>
-            <a role="button" class="list-group-item cWhite s15 square noBorder noMargin bgDark">
+            <a role="button" class="list-group-item cWhite s20 square noBorder noMargin bgDark">
               Link
             </a>
-            <a role="button" class="list-group-item cWhite s15 square noBorder noMargin bgDark">
+            <a role="button" class="list-group-item cWhite s20 square noBorder noMargin bgDark">
               Link
             </a>
-            <a role="button" href="index.html" class="list-group-item cWhite s15 square noBorder noMargin bgDark">
+            <a role="button" href="index.html" class="list-group-item cWhite s20 square noBorder noMargin bgDark">
               Cerrar sesión
             </a>
           </div>
         </div>
         <div class="list-group bgTransparent noBorder square">
-          <a href="main.html" role="button" class="list-group-item cDark s15 square noBorder noMargin bgTransparent">
-            <span class="sidebar-icon fa fa-newspaper-o cDark"></span> Noticias
+          <a href="main.html" role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
+            <span class="sidebar-icon fa fa-newspaper-o cLightGrey"></span> Noticias
           </a>
-          <a href="main.html" role="button" class="list-group-item cDark s15 square noBorder noMargin bgTransparent">
-            <span class="sidebar-icon fa fa-calendar cDark"></span> Eventos
+          <a href="main.html" role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
+            <span class="sidebar-icon fa fa-calendar cLightGrey"></span> Eventos
           </a>
-          <a href="main.html" role="button" class="list-group-item cDark s15 square noBorder noMargin bgTransparent">
-            <span class="sidebar-icon fa fa-bell cDark"></span> Alertas
+          <a href="main.html" role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
+            <span class="sidebar-icon fa fa-bell cLightGrey"></span> Alertas
           </a>
-          <a href="main.html" role="button" class="list-group-item cDark s15 square noBorder noMargin bgTransparent">
-            <span class="sidebar-icon fa fa-tag cDark"></span> etc...
+          <a href="main.html" role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
+            <span class="sidebar-icon fa fa-tag cLightGrey"></span> etc...
           </a>
         </div>
         <hr class="separator">
         <div class="list-group bgTransparent noBorder square">
-          <a role="button" class="list-group-item cDark s15 square noBorder noMargin bgTransparent">
+          <a role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
             link extra 1
           </a>
-          <a role="button" class="list-group-item cDark s15 square noBorder noMargin bgTransparent">
+          <a role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
             link extra 2
           </a>
         </div>
@@ -152,6 +152,28 @@
           <div class="z-col-lg-4 z-col-md-4 z-col-sm-4 z-col-xs-12">
             <button class="z-btn cWhite bgGreen s15 rounded"><span class="fa fa-search"></span></button>
             <div class="clear"></div>
+          </div>
+        </div>
+        <div class="sidebar-nav">
+          <div class="list-group bgTransparent noBorder square">
+            <a href="main.html" role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
+              <span class="sidebar-icon fa fa-cutlery cLightGrey"></span> Restaurantes
+            </a>
+            <a href="main.html" role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
+              <span class="sidebar-icon fa fa-beer cLightGrey"></span> Bares
+            </a>
+            <a href="main.html" role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
+              <span class="sidebar-icon fa fa-glass cLightGrey"></span> Antros
+            </a>
+            <a href="main.html" role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
+              <span class="sidebar-icon fa fa-truck cLightGrey"></span> FoodTrucks
+            </a>
+            <a href="main.html" role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
+              <span class="sidebar-icon fa fa-calendar cLightGrey"></span> Eventos
+            </a>
+            <a href="main.html" role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
+              <span class="sidebar-icon fa fa-map cLightGrey"></span> Ubicaciones
+            </a>
           </div>
         </div>
       </form>
