--- a/main.html
+++ b/main.html
@@ -61,7 +61,7 @@
   <nav class="nav-movil">
     <div class="fab bgBlue"><span class="fa fa-plus s25"></span></div>
     <div class="nav-modal">
-      <div class="blur"></div>
+      <div class="bgCover"></div>
       <ul>
         <li class="z-block h50">
           <a href="#" class="z-content z-contentMiddle cDark s20 text-bold text-center">
@@ -82,39 +82,7 @@
     </div>
   </nav>
   <aside id="sidebar" off-canvas="asideNav left push" role="navigation" class="mainContainer sidebar boxShadowRight bgLightBlue">
-    <div class="sidebar-header header-cover z-forceBlock h200 panelImg" style="background-image: url('images/bg/01.jpg');">
-      <div class="z-block h150">
-        <div class="z-content z-contentMiddle">
-          <div class="sidebar-image panelImg" style="background-image:url('images/profile/01.png')">
-          </div>
-        </div>
-      </div>
-      <a data-toggle="collapse" href="#profile-dropdown" role="button" class="z-block h50 cDark bgWhiteClear">
-        <div class="z-content z-contentMiddle">
-          <div class="z-panelBody">
-            usuario@correo.com
-            <span class="fa fa-caret-down pull-right"></pan>
-          </div>
-        </div>
-      </a>
-    </div>
     <div class="sidebar-nav">
-      <div class="collapse" id="profile-dropdown">
-        <div class="list-group bgLightGrey noBorder square">
-          <a role="button" class="list-group-item cWhite s20 square noBorder noMargin bgDark">
-            Ir a perfil
-          </a>
-          <a role="button" class="list-group-item cWhite s20 square noBorder noMargin bgDark">
-            Link
-          </a>
-          <a role="button" class="list-group-item cWhite s20 square noBorder noMargin bgDark">
-            Link
-          </a>
-          <a role="button" href="index.html" class="list-group-item cWhite s20 square noBorder noMargin bgDark">
-            Cerrar sesión
-          </a>
-        </div>
-      </div>
       <div class="list-group bgTransparent noBorder square">
         <a href="main.html" role="button" class="list-group-item cLightGrey s20 square noBorder noMargin bgTransparent">
           <span class="sidebar-icon fa fa-newspaper-o cLightGrey"></span> Noticias
@@ -201,7 +169,7 @@
                 </div>
               </div>
             </div>
-            <a href="news.html" class="z-panelBody z-block overflowHidden noPadding">
+            <a href="#" class="z-panelBody z-block overflowHidden noPadding">
               <div id="img_00" class="z-row h300 panelImg">
               </div>
               <div class="z-row noMargin">
@@ -248,7 +216,7 @@
                 </div>
               </div>
             </div>
-            <a href="news.html" class="z-panelBody z-block overflowHidden noPadding">
+            <a href="#" class="z-panelBody z-block overflowHidden noPadding">
               <div id="img_01" class="z-row h300 panelImg">
               </div>
               <div class="z-row noMargin">
@@ -294,7 +262,7 @@
                 </div>
               </div>
             </div>
-            <a href="news.html" class="z-panelBody z-block overflowHidden noPadding">
+            <a href="#" class="z-panelBody z-block overflowHidden noPadding">
               <div id="img_02" class="z-row h300 panelImg">
               </div>
               <div class="z-row noMargin">
@@ -340,7 +308,7 @@
                 </div>
               </div>
             </div>
-            <a href="news.html" class="z-panelBody z-block overflowHidden noPadding">
+            <a href="#" class="z-panelBody z-block overflowHidden noPadding">
               <div id="img_03" class="z-row h300 panelImg">
               </div>
               <div class="z-row noMargin">
@@ -386,7 +354,7 @@
                 </div>
               </div>
             </div>
-            <a href="news.html" class="z-panelBody z-block overflowHidden noPadding">
+            <a href="#" class="z-panelBody z-block overflowHidden noPadding">
               <div id="img_04" class="z-row h300 panelImg">
               </div>
               <div class="z-row noMargin">
@@ -432,7 +400,7 @@
                 </div>
               </div>
             </div>
-            <a href="news.html" class="z-panelBody z-block overflowHidden noPadding">
+            <a href="#" class="z-panelBody z-block overflowHidden noPadding">
               <div id="img_05" class="z-row h300 panelImg">
               </div>
               <div class="z-row noMargin">
@@ -478,7 +446,7 @@
                 </div>
               </div>
             </div>
-            <a href="news.html" class="z-panelBody z-block overflowHidden noPadding">
+            <a href="#" class="z-panelBody z-block overflowHidden noPadding">
               <div id="img_06" class="z-row h300 panelImg">
               </div>
               <div class="z-row noMargin">
@@ -524,7 +492,7 @@
                 </div>
               </div>
             </div>
-            <a href="news.html" class="z-panelBody z-block overflowHidden noPadding">
+            <a href="#" class="z-panelBody z-block overflowHidden noPadding">
               <div id="img_07" class="z-row h300 panelImg">
               </div>
               <div class="z-row noMargin">
