--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="z-content z-contentMiddle">
           <div class="z-row">
             <div class="z-col-lg-12">
-              <h1 class="text-center cWhite s60 noMargin text-bold text-shadow wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+              <h1 class="text-center cWhite s50 noMargin text-bold text-shadow text-uppercase wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
                 A donde ir
               </h1>
               <h2 class="text-center cLightBlue s35 noMargin text-bold text-shadow wow fadeInDown" data-wow-duration="1s" data-wow-delay=".8s">
@@ -55,21 +55,23 @@
           </div>
           <div class="clear h100"></div>
           <div class="z-row wow fadeInUp" data-wow-duration="1s" data-wow-delay="2s">
+            <div class="z-col-xs-12">
+              <h4 class="cWhite text-center">Inicia sesión</h4>
+            </div>
             <div class="z-col-lg-4 z-col-lg-offset-2 z-col-md-4 z-col-md-offset-2 z-col-sm-4 z-col-sm-offset-2 z-col-xs-8 z-col-xs-offset-2">
               <a href="main.html" class="z-btn h50 bgBlue cWhite s20 text-center noTransform boxShadow">
                 Facebook
               </a>
+              <div class="clear">
+
+              </div>
             </div>
             <div class="z-col-lg-4 z-col-md-4 z-col-sm-4 z-col-sm-offset-0 z-col-xs-8 z-col-xs-offset-2">
               <a href="main.html" class="z-btn h50 bgRed cWhite s20 text-center noTransform boxShadow">
                 Google+
               </a>
-            </div>
-            <div class="z-col-lg-12 z-col-md-12 z-col-sm-12 z-col-xs-12">
-              <div class="z-block h70">
-                <div class="z-content z-contentMiddle text-center">
-                  <a href="main.html" class="cWhite s20 noTransform">entrar <span class="fa fa-arrow-right"></span></a>
-                </div>
+              <div class="clear">
+
               </div>
             </div>
           </div>
