ajustes al main

--- a/main.html
+++ b/main.html
@@ -58,7 +58,7 @@
       </div>
     </div>
   </nav>
-  <nav class="nav-movil">
+  <nav class="nav-movil hidden">
     <div class="fab bgBlue"><span class="fa fa-plus s25"></span></div>
     <div class="nav-modal">
       <div class="bgCover"></div>
@@ -184,7 +184,7 @@
                 </div>
               </div>
             </a>
-            <div class="z-panelFooter z-block h50 mh50 overflowHidden noPadding bgDarkClear">
+            <div class="z-panelFooter z-block h50 hidden overflowHidden noPadding bgDarkClear">
               <a role="button" class="z-content-fluid z-contentMiddle z-btn cGrey text-center s20">
                 <span class="fa fa-share"></span>
               </a>
@@ -231,7 +231,7 @@
                 </div>
               </div>
             </a>
-            <div class="z-panelFooter z-block h50 mh50 overflowHidden noPadding bgDarkClear">
+            <div class="z-panelFooter z-block h50 hidden overflowHidden noPadding bgDarkClear">
               <a role="button" class="z-content-fluid z-contentMiddle z-btn cGrey text-center s20">
                 <span class="fa fa-share"></span>
               </a>
@@ -277,7 +277,7 @@
                 </div>
               </div>
             </a>
-            <div class="z-panelFooter z-block h50 mh50 overflowHidden noPadding bgDarkClear">
+            <div class="z-panelFooter z-block h50 hidden overflowHidden noPadding bgDarkClear">
               <a role="button" class="z-content-fluid z-contentMiddle z-btn cGrey text-center s20">
                 <span class="fa fa-share"></span>
               </a>
@@ -323,7 +323,7 @@
                 </div>
               </div>
             </a>
-            <div class="z-panelFooter z-block h50 mh50 overflowHidden noPadding bgDarkClear">
+            <div class="z-panelFooter z-block h50 hidden overflowHidden noPadding bgDarkClear">
               <a role="button" class="z-content-fluid z-contentMiddle z-btn cGrey text-center s20">
                 <span class="fa fa-share"></span>
               </a>
@@ -369,7 +369,7 @@
                 </div>
               </div>
             </a>
-            <div class="z-panelFooter z-block h50 mh50 overflowHidden noPadding bgDarkClear">
+            <div class="z-panelFooter z-block h50 hidden overflowHidden noPadding bgDarkClear">
               <a role="button" class="z-content-fluid z-contentMiddle z-btn cGrey text-center s20">
                 <span class="fa fa-share"></span>
               </a>
@@ -415,7 +415,7 @@
                 </div>
               </div>
             </a>
-            <div class="z-panelFooter z-block h50 mh50 overflowHidden noPadding bgDarkClear">
+            <div class="z-panelFooter z-block h50 hidden overflowHidden noPadding bgDarkClear">
               <a role="button" class="z-content-fluid z-contentMiddle z-btn cGrey text-center s20">
                 <span class="fa fa-share"></span>
               </a>
@@ -461,7 +461,7 @@
                 </div>
               </div>
             </a>
-            <div class="z-panelFooter z-block h50 mh50 overflowHidden noPadding bgDarkClear">
+            <div class="z-panelFooter z-block h50 hidden overflowHidden noPadding bgDarkClear">
               <a role="button" class="z-content-fluid z-contentMiddle z-btn cGrey text-center s20">
                 <span class="fa fa-share"></span>
               </a>
@@ -507,7 +507,7 @@
                 </div>
               </div>
             </a>
-            <div class="z-panelFooter z-block h50 mh50 overflowHidden noPadding bgDarkClear">
+            <div class="z-panelFooter z-block h50 hidden overflowHidden noPadding bgDarkClear">
               <a role="button" class="z-content-fluid z-contentMiddle z-btn cGrey text-center s20">
                 <span class="fa fa-share"></span>
               </a>
